# surehive-assessment

./: README.md  cabal.project  surehive-assessment.cabal
src/: BobAuction.hs
