cabal-version:      2.4
name:               surehive-assessment
version:            0.1.0.0
author:             Bereket Godebo
maintainer:         bereket.godebo@outlook.com
License:            Apache-2.0
License-files:      LICENSE

library
    hs-source-dirs:   src
    exposed-modules:  BobAuction
    build-depends:    aeson
                    , base ^>=4.14.1.0
                    , containers
                    , data-default
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-constraints
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise